@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+23-Dec-2009 Andrew Eddie
+ ^ Minor changes to jos_messages table schema.
+
 21-Dec-2009 Louis Landry
 + Added setAdditionalUrlParam and getAdditionalUrlParam to JPagination to allow better URL manipulation for GET requests.  (thanks to Robert Deutz)
 
